# iSTFTNet

./: README.md  istftnet.ipynb  pyproject.toml
istftnet/: config.py  config_test.py  domain.py  loss.py  main_train.py  model.py
istftnet/data/: clip.py  corpus.py  datamodule.py  dataset.py  domain.py  transform.py
istftnet/networks/: discriminator.py  generator.py  initializer.py  merge.py  merge_test.py  res_block.py  up_mrf.py
